# nekocode-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_jp.md  current_task.md  debug_analysis.json  debug_analysis_v2.json  demo_incremental.sh  final-test.py  nekocode_config.json  test-actions-v2.js  test-fixed-workflow.js  test-impact-before.js  test-sample.js  test-sample.py  test_scope_path.rs  test_small.py  test_tree_sitter.sh  verify_size.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-and-test.yml  nekocode-analysis.yml  pr-analysis.yml  release.yml  security.yml
.nekocode_sessions/: 118433ba.json  6e252f3f.json  d72ac0d4.json  ff1b7fec.json
docs/: ARCHITECTURE.md  CLI_MCP_REFERENCE.md  CONFIGURATION_UPDATE.md  DEBUG_GUIDE.md  GITHUB_ACTIONS_SETUP_GUIDE.md  INCLUDE_ANALYSIS_GUIDE.md  LARGE_PROJECT_HANDLING.md  PERFORMANCE_GUIDE.md  README.md  SESSIONDATA_STRUCTURE.md  TOKEN_LIMIT_CONFIGURATION.md  USAGE.md  USAGE_jp.md  circular-dependency-detection.md  phase5_design.md
examples/: test_cpp.cpp
mcp-nekocode-server/: README.md  README_CLEANED.md  README_MCP_UPDATE.md  TEST_SETUP.md  claude_config_example.json  config.json  mcp_server_nekocode.py  mcp_server_real.py  requirements.txt
nekocode-workspace/: Cargo.toml  README-5BINARY.md  mcp_wrapper_5binary.py  setup.py
nekocode-workspace/nekocode/: Cargo.toml
nekocode-workspace/nekocode-core/: Cargo.toml
nekocode-workspace/nekocode-core/src/: config.rs  error.rs  io.rs  lib.rs  memory.rs  session.rs  traits.rs  types.rs
nekocode-workspace/nekocode/src/: analyzer.rs  ast.rs  cli.rs  lib.rs  main.rs  session.rs
nekocode-workspace/nekoimpact/: Cargo.toml
nekocode-workspace/nekoimpact/src/: analyzer.rs  cli.rs  impact.rs  lib.rs  main.rs
nekocode-workspace/nekoinc/: Cargo.toml
nekocode-workspace/nekoinc/src/: cli.rs  incremental.rs  lib.rs  main.rs  watch.rs
nekocode-workspace/nekomcp/: Cargo.toml
nekocode-workspace/nekomcp/src/: cli.rs  lib.rs  main.rs  server.rs
nekocode-workspace/nekorefactor/: Cargo.toml
nekocode-workspace/nekorefactor/src/: cli.rs  lib.rs  main.rs  moveclass.rs  preview.rs  replace.rs
releases/: setup.py
src/: lib.rs  main.rs
src/analyzers/: mod.rs  traits.rs
src/analyzers/cpp/: analyzer.rs  grammar.pest  mod.rs  tree_sitter_analyzer.rs
src/analyzers/csharp/: analyzer.rs  grammar.pest  mod.rs  tree_sitter_analyzer.rs
src/analyzers/go/: analyzer.rs  grammar.pest  mod.rs  tree_sitter_analyzer.rs
src/analyzers/javascript/: analyzer.rs  grammar.pest  grammar_fixed.pest  mod.rs  tree_sitter_analyzer.rs
src/analyzers/python/: analyzer.rs  grammar.pest  mod.rs  tree_sitter_analyzer.rs
src/analyzers/rust/: analyzer.rs  grammar.pest  mod.rs  tree_sitter_analyzer.rs
src/commands/: mod.rs  session_update.rs  watch.rs
src/core/: ast.rs  commands.rs  config.rs  impact.rs  incremental.rs  memory.rs  mod.rs  moveclass.rs  preview.rs  session.rs  types.rs
test_samples/: sample.cpp  sample.cs  sample.go  sample.py  sample.rs
test_workspace/test_files/: Program.cs  api.js  profile.js  test.js  user.js
tests/: incremental_tests.rs
