[workspace]
members = [
    "nekocode-core",
    "nekocode",
    "nekorefactor",
    "nekoimpact",
    "nekoinc",
    "nekomcp"
]
resolver = "2"

# Workspace-wide dependencies for consistent versions
[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# CLI and utilities
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
regex = "1.10"
log = "0.4"
env_logger = "0.11"
notify = "6.1"

# Async utilities
async-trait = "0.1"

# Internal dependencies
nekocode-core = { path = "nekocode-core" }

# Build optimizations for all workspace members
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true