[package]
name = "nekocode-core"
version = "1.0.0"
edition = "2021"
description = "Core library for NekoCode - Session management, types, and common functionality"
authors = ["NekoCode Team"]
license = "MIT"

[dependencies]
# Core dependencies (Tree-sitterは含まない！)
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
log = { workspace = true }

# Async trait support
async-trait = { workspace = true }

# File hashing for change detection
sha2 = "0.10"

# CPU count for default parallelism
num_cpus = "1.16"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
pretty_assertions = "1.4"