[package]
name = "nekocode"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "nekocode"
path = "src/main.rs"

[dependencies]
nekocode-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
walkdir = { workspace = true }
async-trait = { workspace = true }

# Tree-sitter dependencies
tree-sitter = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-go = "0.20"
tree-sitter-c-sharp = "0.20"